1_sem/pwi/projekt/pelnerepo/Projekt/pyton.py


	lib.statystyki.restype = None
	lib.statystyki.argtypes = [ctypes.c_char_p,ctypes.POINTER(TextStats)]
	lib.wyszukiwanie_wzorca.restype = None
	lib.wyszukiwanie_wzorca.argtypes = [ctypes.c_char_p,ctypes.c_char_p]
	lib.wyszukiwanie_znaku_specjalnego.restype = None
	lib.wyszukiwanie_znaku_specjalnego.argtypes = [ctypes.c_char_p,ctypes.c_char_p]
	lib.ignorowanie_wielkosci_liter.restype = None
	lib.ignorowanie_wielkosci_liter.argtypes = [ctypes.c_char_p,ctypes.c_char_p]
	lib.wypisz_tekst_wersja1.restype = None
	lib.wypisz_tekst_wersja1.argtypes = [ctypes.c_char_p,ctypes.c_int,ctypes.c_int]
	lib.wypisz_tekst_wersja2.restype = None
	lib.wypisz_tekst_wersja2.argtypes = [ctypes.c_char_p,ctypes.c_int,ctypes.c_int]
	lib.wypisanie_statystyk_liter.restype = None
	lib.wypisanie_statystyk_liter.argtypes = [TextStats]
	lib.zliczanie_wzorca.restype = ctypes.c_int
	lib.zliczanie_wzorca.argtypes = [ctypes.c_char_p,ctypes.c_char_p]
	lib.podmiana_wzorca.restype = None
	lib.podmiana_wzorca.argtypes = [ctypes.c_char_p,ctypes.c_char_p,ctypes.c_char_p,ctypes.c_char_p]


	
	return lib
	
def podzial_init():
	nazwa = 'podzial'

	if os.name == 'posix':
		compile_command = [
			"gcc",
			"-shared",
			"-fPIC",
			nazwa+'.c',
			"-o",
			nazwa+'.so'
			]
		try:
			subprocess.run(compile_command, check=True)
		except:
			print("Cos poszlo zle :( Upewnij sie ze masz zainstalowane gcc")
			exit()
		lib = ctypes.CDLL("./"+nazwa+".so")
	elif os.name == 'nt':
			try:
					os.environ['PATH'] = r'C:\msys64\mingw64\bin;' + os.environ['PATH']
					subprocess.run(['gcc', '-shared', nazwa+'.c', '-o',  nazwa + '.dll'], check=True)
			except:
					print("Cos poszlo zle :( Upewnij sie ze masz zainstalowane gcc")
					exit()
			lib = ctypes.CDLL('./'+nazwa+'.dll')
	#kod z konwerter.py

	lib.zwolnij.restype = None
	lib.zwolnij.argtypes = [ctypes.POINTER(ctypes.c_char_p),ctypes.c_int]
	lib.porownaj_slowo.restype = ctypes.c_int
	lib.porownaj_slowo.argtypes = [ctypes.c_void_p,ctypes.c_void_p]
	lib.wczytaj_slownik.restype = ctypes.POINTER(ctypes.c_char_p)
	lib.wczytaj_slownik.argtypes = [ctypes.c_char_p,ctypes.POINTER(ctypes.c_int)]
	lib.najlepszy_podzial.restype = ctypes.c_int
	lib.najlepszy_podzial.argtypes = [ctypes.c_char_p,ctypes.POINTER(ctypes.c_char_p),ctypes.c_int,ctypes.POINTER(ctypes.POINTER(ctypes.c_char_p)),ctypes.POINTER(ctypes.c_int),ctypes.POINTER(ctypes.POINTER(ctypes.c_char_p)),ctypes.POINTER(ctypes.c_int)]
	lib.podziel_na_zdania.restype = ctypes.POINTER(ctypes.c_char_p)
	lib.podziel_na_zdania.argtypes = [ctypes.c_char_p,ctypes.POINTER(ctypes.c_int)]
	lib.polacz_wyniki_do_ciagu.restype = None
	lib.polacz_wyniki_do_ciagu.argtypes = [ctypes.POINTER(ctypes.c_char_p),ctypes.c_int,ctypes.POINTER(ctypes.c_char_p),ctypes.POINTER(ctypes.c_char_p),ctypes.c_int]
	lib.sprawdz_gramatyke.restype = None
	lib.sprawdz_gramatyke.argtypes = [ctypes.c_char_p]



	
	return lib
	
def arithmetic_init():
	nazwa = 'arithmetic'

	if os.name == 'posix':
		compile_command = [
			"g++",
			'-std=c++17',
			"-shared",
			"-fPIC",
			nazwa+'.cpp',
			"-o",
			nazwa+'.so'
			]
		try:
			subprocess.run(compile_command, check=True)
		except:
			print("Cos poszlo zle :( Upewnij sie ze masz zainstalowane gcc")
			exit()
		lib = ctypes.CDLL("./"+nazwa+".so")
	elif os.name == 'nt':
			try:
					os.environ['PATH'] = r'C:\msys64\mingw64\bin;' + os.environ['PATH']
					subprocess.run(['g++', '-std=c++17',"-static",'-shared', nazwa+'.cpp', '-o',  nazwa + '.dll'], check=True)
			except:
					print("Cos poszlo zle :( Upewnij sie ze masz zainstalowane gcc")
					exit()
			lib = ctypes.CDLL('./'+nazwa+'.dll')
	#kod z konwerter.py

	lib.c_compress.restype = None
	lib.c_compress.argtypes = [ctypes.c_char_p,ctypes.c_char_p]
	lib.c_decompress.restype = None
	lib.c_compress.argtypes = [ctypes.c_char_p,ctypes.c_char_p]



	
	return lib

def base64_init():
	nazwa = 'base64'

	if os.name == 'posix':
		compile_command = [
			"g++",
			'-std=c++17',
			"-shared",
			"-fPIC",
			nazwa+'.cpp',
			"-o",
			nazwa+'.so'
			]
		try:
			subprocess.run(compile_command, check=True)
		except:
			print("Cos poszlo zle :( Upewnij sie ze masz zainstalowane g++")
			exit()
		lib = ctypes.CDLL("./"+nazwa+".so")
	elif os.name == 'nt':
			try:
					os.environ['PATH'] = r'C:\msys64\mingw64\bin;' + os.environ['PATH']
					subprocess.run(['g++', '-std=c++17','-shared',"-static", nazwa+'.cpp', '-o',  nazwa + '.dll'], check=True)
			except:
					print("Cos poszlo zle :( Upewnij sie ze masz zainstalowane g++")
					exit()
			lib = ctypes.CDLL('./'+nazwa+'.dll')
	#kod z konwerter.py
	lib.c_encode1421.restype = ctypes.c_char_p
	lib.c_encode1421.argtypes = [ctypes.c_char_p]
	lib.c_encode2045.restype = ctypes.c_char_p
	lib.c_encode2045.argtypes = [ctypes.c_char_p]
	lib.c_encode2152.restype = ctypes.c_char_p
	lib.c_encode2152.argtypes = [ctypes.c_char_p]
	lib.c_encode3501.restype = ctypes.c_char_p
	lib.c_encode3501.argtypes = [ctypes.c_char_p]
	lib.c_encode4648_4.restype = ctypes.c_char_p
	lib.c_encode4648_4.argtypes = [ctypes.c_char_p]
	lib.c_encode4648_5.restype = ctypes.c_char_p
	lib.c_encode4648_5.argtypes = [ctypes.c_char_p]
	lib.c_encode4880.restype = ctypes.c_char_p
	lib.c_encode4880.argtypes = [ctypes.c_char_p]
	lib.c_decode1421.restype = ctypes.c_char_p
	lib.c_decode1421.argtypes = [ctypes.c_char_p]
	lib.c_decode2045.restype = ctypes.c_char_p
	lib.c_decode2045.argtypes = [ctypes.c_char_p]
	lib.c_decode2152.restype = ctypes.c_char_p
	lib.c_decode2152.argtypes = [ctypes.c_char_p]
	lib.c_decode3501.restype = ctypes.c_char_p
	lib.c_decode3501.argtypes = [ctypes.c_char_p]
	lib.c_decode4648_4.restype = ctypes.c_char_p
	lib.c_decode4648_4.argtypes = [ctypes.c_char_p]
	lib.c_decode4648_5.restype = ctypes.c_char_p
	lib.c_decode4648_5.argtypes = [ctypes.c_char_p]
	lib.c_decode4880.restype = ctypes.c_char_p
	lib.c_decode4880.argtypes = [ctypes.c_char_p]



	
	return lib




def get_all_libs():
	lib = {}
	lib['biblioteka'] = biblioteka_init()
	lib['palindrom'] = palindrom_init()
	lib['szyfr_rsa'] = szyfr_rsa_init()
	lib['plot'] = plot_init()
	lib['podzial'] = podzial_init()
	lib['regex'] = regex_init()
	lib['rozpoznawanie_jezyka'] = rozpoznawanie_jezyka_init()
	lib['nawiasowanie'] = nawiasowanie_init()
	lib['arithmetic'] = arithmetic_init()
	lib['base64'] = base64_init()
	return lib
